# src/SonnetDB/Json/ServerJsonContext.cs
@@ -76,6 +76,17 @@ namespace SonnetDB.Json;
 [JsonSerializable(typeof(DocumentUpdateContract))]
 [JsonSerializable(typeof(DocumentUpdateOneRequest))]
 [JsonSerializable(typeof(DocumentUpdateManyRequest))]
+[JsonSerializable(typeof(DocumentUpdatePreviewRequest))]
+[JsonSerializable(typeof(DocumentUpdatePreviewItemResponse))]
+[JsonSerializable(typeof(DocumentUpdatePreviewResponse))]
+[JsonSerializable(typeof(DocumentIndexPartialFilterContract))]
+[JsonSerializable(typeof(DocumentIndexCreateRequest))]
+[JsonSerializable(typeof(DocumentIndexOperationResponse))]
+[JsonSerializable(typeof(DocumentIndexConsistencyItemResponse))]
+[JsonSerializable(typeof(DocumentIndexConsistencyResponse))]
+[JsonSerializable(typeof(DocumentChangeFeedRequest))]
+[JsonSerializable(typeof(DocumentChangeFeedItemResponse))]
+[JsonSerializable(typeof(DocumentChangeFeedResponse))]
 [JsonSerializable(typeof(DocumentDeleteOneRequest))]
 [JsonSerializable(typeof(DocumentDeleteManyRequest))]
 [JsonSerializable(typeof(DocumentWriteErrorResponse))]
@@ -95,6 +106,9 @@ namespace SonnetDB.Json;
 [JsonSerializable(typeof(List<DocumentWriteItem>))]
 [JsonSerializable(typeof(List<DocumentWriteErrorResponse>))]
 [JsonSerializable(typeof(List<DocumentItemResponse>))]
+[JsonSerializable(typeof(List<DocumentUpdatePreviewItemResponse>))]
+[JsonSerializable(typeof(List<DocumentIndexConsistencyItemResponse>))]
+[JsonSerializable(typeof(List<DocumentChangeFeedItemResponse>))]
 [JsonSerializable(typeof(List<DocumentFilterContract>))]
 [JsonSerializable(typeof(List<DocumentProjectionContract>))]
 [JsonSerializable(typeof(List<DocumentSortContract>))]
